--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Drama'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: "The Compromise of the King of the Golden Isles\r\nThe Flight of\
   \ the Queen\r\nCheezo\r\nA Good Bargain\r\nIf Shakespeare Lived To-day\r\nFame and\
   \ the Poet."
